Modified main function, Change fuction code to selectable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ project(las-tools)
 
 find_package(PCL REQUIRED)
 find_package(libLAS REQUIRED)
+find_package(OpenCV REQUIRED)
 find_package(Boost COMPONENTS filesystem REQUIRED)
 find_package(OpenMP)
 
@@ -15,9 +16,9 @@ if (OPENMP_FOUND)
     set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-include_directories(include ${PCL_INCLUDE_DIRS} ${OpenCV_LIBS})
+include_directories(include include/utils ${PCL_INCLUDE_DIRS} ${OpenCV_LIBS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable (las-tools main.cpp)
-target_link_libraries (las-tools ${PCL_LIBRARIES} ${libLAS_LIBRARIES})
+add_executable (las-tools main.cpp src/lastool.cpp src/utils.cpp)
+target_link_libraries (las-tools ${OpenCV_LIBS} ${PCL_LIBRARIES} ${libLAS_LIBRARIES})
